[package]
name = "wssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.16"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
futures-util = "0.3.30"
log = "0.4.22"
prettytable-rs = "0.10.0"
rookie = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "4.0.2"
tokio = { version = "1.39.3", features = ["full"]} 
tokio-tungstenite ={ version = "0.23.1", features= ["native-tls"] }
tungstenite = { version = "0.23.0", features= ["native-tls"] }
ureq = "2.10.1"
urlencoding = "2.1.3"
